--- a/liosanJavascript/pages/plato/bebidas.html
+++ b/liosanJavascript/pages/plato/bebidas.html
@@ -19,10 +19,11 @@
     <script src="https://kit.fontawesome.com/35c02bc82e.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/45805190a7.js" crossorigin="anonymous"></script>
 
-    <!-- Scripts -->
-    <script src="../../public/js/app.js" defer></script>
-    <script src="../../public/js/galery.js?28112022" defer></script>
-    <script src="../../public/js/loadNavIndex.js" defer></script> <!-- Archivo que cargará el nav Index-->
+  <!-- DESARROLLO JavaScript-->
+  <script src="../../public/js/codeMenu.js" defer></script>
+  <script src="../../public/js/codeLoadContactoIndex.js" defer></script>
+  <script src="../../public/js/loadNavIndex.js" defer></script><!-- Archivo que cargará el nav Index-->
+  <script src="../../public/js/loadFooterIndex.js" defer></script> <!-- Archivo que cargará el footer Index-->
 
 
     <!-- Fonts -->
@@ -92,7 +93,9 @@
   <!-- JavaScript ALERTIFY-->
   <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 
-  <!-- DESARROLLO JavaScript-->
-  <script src="../../public/js/codeMenu.js"></script>
+
     </body>
+    <div class="container" id="footer">
+      <!-- Aqui se carga el footer -->
+    </div>
 </html>
