Arreglo de pequeños errores a la hora de cargar los contactos botones flotantes y mejora del footer.

--- a/liosanJavascript/pages/admin/navIndex.html
+++ b/liosanJavascript/pages/admin/navIndex.html
@@ -1,7 +1,7 @@
 <!-- nav.html index -->
 <nav class="navbar navbar-expand-lg bg-light bg-white shadow-lg ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../admin/pedidos.html">
+      <a class="navbar-brand" href="/">
         <img src="../../public/images/sarten.png" class="sarten" alt="Main Lofgo">
         <img src="../../public/images/logoo.ico" class="logo" alt="Main Logo">
       </a>
