--- a/liosanJavascript/pages/plato/indexEntrada.html
+++ b/liosanJavascript/pages/plato/indexEntrada.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lio San</title>
-  <link rel="icon" href="../../public/images/miniatura.ico">
+  <link rel="icon" href="/images/miniatura.ico">
+
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
