Se corrigio login con validacion de usuario existente y mejoro el footer para registro de clientes.

--- a/liosanJavascript/pages/admin/login.html
+++ b/liosanJavascript/pages/admin/login.html
@@ -182,7 +182,7 @@
                                 <option>Avellaneda</option>
                             </select>
                         </div>
-                        <div class="col-md-4">
+<!--                         <div class="col-md-4">
                             <label for="rolRegister" class="form-label">Rol</label>
                             <select class="form-select" id="rolRegister" name="rolRegister" required>
 
@@ -191,7 +191,7 @@
                                 <option>Recepcionista</option>
                                 <option>Cocinero</option>
                             </select>
-                        </div>
+                        </div> -->
                         <div class="col-md-4">
                             <label for="celularRegister" class="form-label">Celular</label>
                             <input type="number" class="form-control" id="celularRegister" name="celularRegister"
@@ -202,9 +202,9 @@
                             <label for="foto" class="col-form-label">Foto</label>
                             <input type="file" class="form-control" id="fotoRegister"
                                 aria-describedby="inputGroupFileAddon04" aria-label="Upload" required>
-                            <!-- <input id="foto" type="text" class="form-control" autofocus> -->
+                            
                         </div>
-                        <div class="col-12">
+<!--                         <div class="col-12">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="terminosCondiciones"
                                     required>
@@ -212,7 +212,7 @@
                                     Acepto los términos y condiciones
                                 </label>
                             </div>
-                        </div>
+                        </div> -->
                     </form>
                 </div>
                 <div class="modal-footer">
