--- a/liosanJavascript/pages/admin/registerAdmin.html
+++ b/liosanJavascript/pages/admin/registerAdmin.html
@@ -177,6 +177,7 @@
                                         <option>Mozo</option>
                                         <option>Recepcionista</option>
                                         <option>Cocinero</option>
+                                        <option>Cliente</option>
                                     </select>
                                 </div>
                                 <div class="col-md-4">
