--- a/liosanJavascript/pages/admin/contactoAdmin.html
+++ b/liosanJavascript/pages/admin/contactoAdmin.html
@@ -160,7 +160,7 @@
                                         <i class="bi bi-geo-alt-fill"></i>
                                     </span>
 
-                                    <input id="direccionMaps" type="text" class="form-control" placeholder="Copie la direccion de google maps Aquí">
+                                    <input id="direccionMaps" type="text" class="form-control" placeholder="Copie aquí el iframe de GoogleMaps">
                                 </div>
 
                                 <label for="nombre" class="col-form-label">Estado</label>
