--- a/liosanJavascript/pages/admin/footer.html
+++ b/liosanJavascript/pages/admin/footer.html
@@ -69,9 +69,9 @@
          class="text-center p-3"
          style="background-color: rgba(0, 0, 0, 0.2)"
          >
-      © 2024 Copyright:
-      <a class="text-white" href="https://www.visithouse.com.ar/"
-         >Diseñado por: Visit House publica tus propiedades!</a
+      © 2024 Copyright: El Cabe FullStack   |   
+      <a class="text-white" href="/login"
+         >Podes Dejar tu comentario aquí</a
         >
     </div>
     <!-- Copyright -->
