Se implemento Solo acceso a usuarios con roles especificos a las rutas de administracion.

--- a/liosanJavascript/pages/admin/navAdmin.html
+++ b/liosanJavascript/pages/admin/navAdmin.html
@@ -10,13 +10,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-<!--                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="pedidosfinal.html">
-                        <i class="fa-solid fa-bell-concierge"></i>
-                        Pedidos Final
-                    </a>
-                </li> -->
+            <ul class="navbar-nav" id="cargaRol">
+
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/admin/pedidos">
                         <i class="fa-solid fa-bell-concierge"></i>Pedidos
@@ -27,14 +22,10 @@
                         <i class="fa-solid fa-plate-wheat"></i>Platillos
                     </a>
                 </li>
-<!--                 <li class="nav-item">
-                    <a class="nav-link active" href="login.html">
-                        <i class="fa-solid fa-drumstick-bite"></i>Login
-                    </a>
-                </li> -->
+
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/registeradmin">
-                        <!-- <i class="fa-solid fa-drumstick-bite"></i> -->
+                        
                         <i class="fa-solid fa-address-card"></i>Registro Admin
                     </a>
                 </li>
