Se Agrego la funcion de editar perfil desde cualquier usuario, y se corrigieron algunos errores

--- a/liosanJavascript/pages/admin/registerAdmin.html
+++ b/liosanJavascript/pages/admin/registerAdmin.html
@@ -199,7 +199,7 @@
                                     <!-- <input id="foto" type="text" class="form-control" autofocus> -->
                                 </div>
 
-                                <div class="col-12">
+<!--                                 <div class="col-12">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value=""
                                             id="terminosCondiciones">
@@ -207,7 +207,7 @@
                                             Acepto los términos y condiciones
                                         </label>
                                     </div>
-                                </div>
+                                </div> -->
                             </form>
                         </div>
                         <div class="modal-footer">
