--- a/liosanJavascript/pages/admin/navAdmin.html
+++ b/liosanJavascript/pages/admin/navAdmin.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav" id="cargaRol">
 
-
+<!-- Aqui se carga los li correspondientes al rol del usuario -->
                 <li class="nav-item">
                     <button id="logout" type="button" class="btn btn-outline-danger">Logout</button>
                 </li>
