Se agrego implementacion de comentarios, solo queda la funcionalidad de editar y guardar, se corrigieron errores de token, suario admin

--- a/liosanJavascript/pages/admin/usuarioAdmin.html
+++ b/liosanJavascript/pages/admin/usuarioAdmin.html
@@ -88,7 +88,7 @@
 
                                 <figure class="figure position-absolute m-0 opacity-06 z-index-100"
                                     style="bottom:0; right: 10px">
-                                    <!--                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                                                       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                         width="444px" height="626px">
                                         <defs>
                                             <linearGradient id="PSgrad_1" x1="0%" x2="81.915%" y1="57.358%" y2="0%">
@@ -103,7 +103,7 @@
                                         <path fill="url(#PSgrad_1)"
                                             d="M816.210,-41.714 L968.999,111.158 L-197.210,1277.998 L-349.998,1125.127 L816.210,-41.714 Z">
                                         </path>
-                                    </svg> -->
+                                    </svg>
                                 </figure>
                             </div>
 
@@ -112,7 +112,7 @@
                                 <form action="#" class="contact-form form-validate" novalidate="novalidate" id="editarPerfil"
                                     >
                                     <div class="row" id="datosEditar">
-                                        <!-- Datos a editar -->
+                                        <!-- se insertan los datos a editar -->
 
                                     </div>
 
