--- a/liosanJavascript/pages/admin/comentariosAdmin.html
+++ b/liosanJavascript/pages/admin/comentariosAdmin.html
@@ -22,6 +22,7 @@
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <!--Bootstrap ICONS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -37,9 +38,9 @@
     <!-- Scripts -->
     <script src="../../public/js/app.js" defer></script>
     <script src="../../public/js/galery.js?28112022" defer></script> <!-- DESARROLLO JavaScript-->
-    <script src="../../public/js/codePlatillos.js" defer></script>
+    <script src="../../public/js/codeComentarios.js" defer></script>
     <script src="../../public/js/loadNav.js" defer></script> <!-- Archivo que cargará el nav -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script><!-- CDN de boostrap -->
     <!-- Fonts -->
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -61,16 +62,14 @@
             <br>
             <div class="container">
 
-                <h1 class="container mb-4">Lista de Videos de Portada</h1>
+                <h1 class="container mb-4">Lista de comentarios</h1>
                 <h1 id="welcome"></h1>
                 <p id="role"></p>
                 </br>
-                <!--Boton para ingresar al modal-->
-                <!--                 <button id="btnCrear" type="button" class="btn btn-success" data-bs-toggle="modal" >Ingresar Nuevo Platillo</button> -->
-
-                <button id="btnCrear" type="button" class="btn btn-success" data-bs-toggle="modal"
-                    data-bs-target="#modalVideoPortada">Ingresar Nuevo Platillo</button>
-
+                <!-- Botón para abrir el modal -->
+                <button id="btnCrear" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ratingModal">
+                    Calificar Platillo
+                </button>
                 </br></br></br>
 
                 <!--TABLA DE PLATILLOS-->
@@ -83,15 +82,15 @@
                             <thead class="">
                                 <tr>
                                     <th>ID</th>
-                                    <th>Video</th>
-                                    <th>Nombre</th>
-                                    <th>Tipo</th>
-                                    <th>Descripcion</th>
-                                    <th>Acciones</th>
+                                    <th>ID Usuario</th>
+                                    <th>Usuario</th>
+                                    <th>Puntuación</th>
+                                    <th>Comentario</th>
+                                    <th>Respuesta</th>
                                 </tr>
                             </thead>
                             <tbody id="tbodyId">
-
+                                <!-- Aqui se cargaran los comentarios: -->
                             </tbody>
                         </table>
                     </div>
@@ -100,77 +99,45 @@
             <!-- Modal formulario de ingreso de datos modal-->
 
 
-            <div id="modalVideoPortada" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true" data-bs-target="#modalVideoPortada">
-                <div class="modal-dialog">
+            <div class="modal fade" id="ratingModal" tabindex="-1" aria-labelledby="ratingModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Ingresar nuevo platillo</h1>
+                            <h5 class="modal-title" id="ratingModalLabel">Califica el platillo</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body">
-                            <form id="formPlatillo" class="form-inline" enctype="multipart/form-data">
+                        <div class="modal-body text-center">
+                            <div class="star-container" id="starContainer">
+                                <!-- 5 estrellas iniciales -->
+                                <i class="bi bi-star star" data-value="1"></i>
+                                <i class="bi bi-star star" data-value="2"></i>
+                                <i class="bi bi-star star" data-value="3"></i>
+                                <i class="bi bi-star star" data-value="4"></i>
+                                <i class="bi bi-star star" data-value="5"></i>
+                            </div>
+                            <p class="mt-3" id="ratingDisplay">Puntuación: 0</p>
+                            <!-- Comentario -->
+                        <!-- Comentario -->
+                        <div class="mt-3">
+                            <label for="comment" class="form-label">Deja tu comentario:</label>
+                            <textarea class="form-control" id="comment" rows="3" placeholder="Escribe tu comentario aquí..." maxlength="120"></textarea>
+                            <div id="charCounter">0 / 120 caracteres</div>
+                        </div>
+                        <div class="mt-3">
+                            <label for="respuesta" class="form-label">Deja tu Respuesta:</label>
+                            <textarea class="form-control" id="respuesta" rows="3" placeholder="Escribe tu respuesta aquí..." maxlength="120"></textarea>
+                            <div id="charCounterRespuesta">0 / 120 caracteres</div>
+                        </div>
+                        </div>
 
-                                <!-- Mostrando en lista desplegable el tipo de platillo -->
-                                <div class="form-group col-md-6">
-                                    <label for="inputState">Ingrese a que portada pertenece</label>
-                                    <select id="inputState" class="form-control">
-
-                                        <option>Entrada Portada</option>
-                                        <option>Pollos Portada</option>
-                                        <option>Mariscos Portada</option>
-                                        <option>Chifa Portada</option>
-                                        <option>Sopas Portada</option>
-                                        <option>Criolla Portada</option>
-                                        <option>Saborisadas Portada</option>
-                                        <option>Vinos Portada</option>
-                                        <option>Cervezas Portada</option>
-
-                                    </select>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="nombre" class="col-form-label">Nombre</label>
-                                    <input id="nombreVideo" type="text" class="form-control" autofocus>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label for="descripcion" class="col-form-label">Descripción</label>
-                                    <input id="descripcionVideo" type="text" class="form-control" autofocus>
-                                </div>
-                                <div class="mb-3">
-
-                                    <video class="img-thumbnail img-fluid" src="" id="videoModal" width="150px" autoplay
-                                        muted loop></video>
-
-                                </div>
-                                <!--                            <td>
-                                    <img  class="img-thumbnail img-fluid" id="imgModal" src="" alt="" width="150px">
-                                </td> -->
-                                <div class="mb-3">
-                                    <label for="Video" class="col-form-label">Video</label>
-                                    <input type="file" class="form-control" id="video"
-                                        aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-                                    <!-- <input id="foto" type="text" class="form-control" autofocus> -->
-                                </div>
-                                <!--                                 <div class="input-group">
-                                    <label for="foto" class="col-form-label">Foto</label>
-                                    <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-                                
-                                </div> -->
-
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary"
-                                        data-bs-dismiss="modal">Cerrar</button>
-                                    <button type="submit" class="btn btn-primary"
-                                        data-bs-dismiss="modal">Guardar</button>
-                                </div>
-                            </form>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary" id="saveRating">Guardar</button>
                         </div>
                     </div>
                 </div>
             </div>
-
 
         </main>
     </div>
