implementacion completa de comentarios de usuarios, arreglo de errores varios.

--- a/liosanJavascript/pages/admin/footer.html
+++ b/liosanJavascript/pages/admin/footer.html
@@ -20,7 +20,7 @@
           <hr class="w-100 clearfix d-md-none" />
 
           <!-- Grid column -->
-          <div class="col-md-2 col-lg-1 col-xl-1 mx-auto mt-3">
+          <div class="col-md-2 col-lg-1 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Platillos</h6>
             <p>
               <a class="nav-link active" href="/plato/pollos">
@@ -70,7 +70,7 @@
          style="background-color: rgba(0, 0, 0, 0.2)"
          >
       © 2024 Copyright: El Cabe FullStack   |   
-      <a class="text-white" href="/login"
+      <a class="text-white" href="/contacto/comentarios"
          >Podes Dejar tu comentario aquí</a
         >
     </div>
