--- a/liosanJavascript/pages/admin/comentariosCliente.html
+++ b/liosanJavascript/pages/admin/comentariosCliente.html
@@ -38,7 +38,7 @@
     <!-- Scripts -->
     <script src="../../public/js/app.js" defer></script>
     <script src="../../public/js/galery.js?28112022" defer></script> <!-- DESARROLLO JavaScript-->
-    <script src="../../public/js/codeComentarios.js" defer></script>
+    <script src="../../public/js/codeComentariosCliente.js" defer></script>
     <script src="../../public/js/loadNav.js" defer></script> <!-- Archivo que cargará el nav -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <!-- CDN de boostrap -->
@@ -70,7 +70,7 @@
                 <!-- Botón para abrir el modal -->
                 <button id="btnCrear" type="button" class="btn btn-primary" data-bs-toggle="modal"
                     data-bs-target="#ratingModal">
-                    Crea tu propio comentario ;)
+                    Ingresar un comentario
                 </button>
                 </br></br></br>
 
@@ -90,6 +90,7 @@
                                     <th>Comentario</th>
                                     <th>Respuesta</th>
                                     <th>Fecha</th>
+
                                 </tr>
                             </thead>
                             <tbody id="tbodyId">
@@ -130,12 +131,12 @@
                                     placeholder="Escribe tu comentario aquí..." maxlength="120"></textarea>
                                 <div id="charCounter">0 / 120 caracteres</div>
                             </div>
-                            <div class="mt-3">
+<!--                             <div class="mt-3">
                                 <label for="respuesta" class="form-label">Deja tu Respuesta:</label>
                                 <textarea class="form-control" id="respuesta" rows="3"
                                     placeholder="Escribe tu respuesta aquí..." maxlength="120"></textarea>
                                 <div id="charCounterRespuesta">0 / 120 caracteres</div>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="modal-footer">
